Fix item amount alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,7 +81,6 @@ header {
 }
 
 .item_list .icon {
-    position: relative;
     text-align: center;
 }
 
@@ -93,8 +92,9 @@ header {
 
     z-index: 1;
     margin: 0 auto;
+    text-align: right;
     position: relative;
-    left: 24px;
+    right: 5px;
     bottom: 47px;
 }
 
